fix img alignment

--- a/style.css
+++ b/style.css
@@ -108,11 +108,13 @@ button {
 .info {
     max-width: 100px;
     text-align: center;
-    padding: 20px;
-    justify-content: space-between;
+    padding: 80px;
+    justify-content: center;
 }
 
 .content {
     display: flex;
-    justify-content: space-around;
+  align-items: center;
+  gap: 52px;
+  text-align: center;
 }
